--- a/front/src/app/profile/profile-infos/profile-infos.component.html
+++ b/front/src/app/profile/profile-infos/profile-infos.component.html
@@ -3,7 +3,7 @@
         <div class="col-md-12">
             <div class="row">
                 <div class="col-md-12">
-                    <md-card class="bg-primary card-cascade text-white text-uppercase">
+                    <md-card class="bg-secondary card-cascade text-white text-uppercase">
                         Détails
                     </md-card>
                 </div>
@@ -19,44 +19,42 @@
             </div>
             <hr class="w-100 mt-0">
             <div class="col-md-3">
-                <label class="text-uppercase text-primary">Nom</label><br>
-                <label>{{member.lastName}}</label>
+                <label class="text-uppercase">Email</label><br>
+                <label class="text-secondary">{{member.mail}}</label>
             </div>
             <div class="col-md-3">
-                <label class="text-uppercase text-primary">Prénom</label><br>
-                <label>{{member.firstName}}</label>
+                <label class="text-uppercase">Nom</label><br>
+                <label class="text-secondary">{{member.lastName}}</label>
             </div>
-            <div class="col-md-3" *ngFor="let measurement of member.measurements">
-                <div [ngSwitch]="measurement.name">
-                    <div *ngSwitchCase="'SIZE'">
-                        <label class="text-uppercase text-primary">Taille</label><br>
-                        <label>{{measurement.value}} {{measurement.unit}}</label>
-                    </div>
-                    <div *ngSwitchCase="'WEIGHT'">
-                        <label class="text-uppercase text-primary">Poids</label><br>
-                        <label>{{measurement.value}} {{measurement.unit}}</label>
-                    </div>
-                </div>
+            <div class="col-md-3">
+                <label class="text-uppercase">Prénom</label><br>
+                <label class="text-secondary">{{member.firstName}}</label>
+            </div>
+            <div class="col-md-3">
+                <label class="text-uppercase">Occurence à la salle</label><br>
+                <label class="text-secondary">{{member.sessionFrequency}} fois</label>
             </div>
         </div>
+
         <div class="row text-center pt-4">
             <div class="col-md-12 text-left">
                 <h4>
-                    <small class="subtitle">Objectif</small>
+                    <small class="subtitle">Mensurations principales</small>
                 </h4>
             </div>
             <hr class="w-100 mt-0">
-            <div class="col-md-12">
-                <img src="../../../assets/img/exercise-types/strength-64.png" class="rounded" alt="Type">
-                <div [ngSwitch]="member.objective">
-                    <div *ngSwitchCase="'MassGainer'" class="text-primary pt-2">Prise de masse</div>
-                    <div *ngSwitchCase="'WeightLoss'" class="text-primary pt-2">Perte de poids</div>
-                    <div *ngSwitchCase="'GeneralForm'" class="text-primary pt-2">Forme générale</div>
+            <div class="col-md-6" *ngFor="let measurement of member.measurements">
+                <div [ngSwitch]="measurement.name">
+                    <div *ngSwitchCase="'SIZE'">
+                        <label class="text-uppercase">Taille</label><br>
+                        <label class="text-secondary">{{measurement.value}} {{measurement.unit}}</label>
+                    </div>
+                    <div *ngSwitchCase="'WEIGHT'">
+                        <label class="text-uppercase">Poids</label><br>
+                        <label class="text-secondary">{{measurement.value}} {{measurement.unit}}</label>
+                    </div>
                 </div>
             </div>
         </div>
     </md-card-content>
-    <md-card-actions class="text-center">
-        <button md-button>EDITER</button>
-    </md-card-actions>
 </md-card>
