--- a/front/src/app/shared/navbar/sidebar.component.scss
+++ b/front/src/app/shared/navbar/sidebar.component.scss
@@ -51,6 +51,7 @@
 
 .sidebar-link {
   cursor: pointer;
+  font-family: Gotham, "Helvetica Neue", Helvetica, Arial, sans-serif;
   &:hover {
     color: $primary-color;
     background-color: white;
