--- a/front/src/app/profile/profile-infos/profile-infos.component.scss
+++ b/front/src/app/profile/profile-infos/profile-infos.component.scss
@@ -1,6 +1,7 @@
+@import "../../../assets/style/colors";
 
 .subtitle {
-  color: #757575;
+  color: $primary-color !important;
   font-weight: 300;
   font-style: italic;
 }
