--- a/front/src/app/profile/profile-photo/profile-photo.component.html
+++ b/front/src/app/profile/profile-photo/profile-photo.component.html
@@ -3,7 +3,7 @@
         <div class="col-md-12">
             <div class="row">
                 <div class="col-md-12">
-                    <md-card class="bg-primary card-cascade text-white text-uppercase">
+                    <md-card class="bg-secondary card-cascade text-white text-uppercase">
                         Photo
                     </md-card>
                 </div>
@@ -15,8 +15,4 @@
             <img md-card-image class="rounded-photo-corners" src="../../../assets/img/profile/fitgirl.jpg">
         </div>
     </md-card-content>
-    <md-card-actions class="text-center">
-        <button md-button class="text-">EDITER</button>
-        <button md-button>SUPPRIMER</button>
-    </md-card-actions>
 </md-card>
