--- a/front/src/assets/style/_sizes.scss
+++ b/front/src/assets/style/_sizes.scss
@@ -37,3 +37,11 @@
 .mt-10 {
   margin-top: 4.5rem !important
 }
+
+.pt-10 {
+  padding-top: 4.5rem !important
+}
+
+.pt-30 {
+  padding-top: 13.5rem !important
+}
