landing page wih signin and signup from silicon valley.

--- a/front/src/app/app.component.css
+++ b/front/src/app/app.component.css
@@ -6,4 +6,7 @@ body {
   flex-direction: row;
   -webkit-flex-direction: row; }
 
+.container-bg {
+  background: url("../assets/img/background.jpg"); }
+
 /*# sourceMappingURL=app.component.css.map */
