--- a/front/src/app/profile/profile-photo/profile-photo.component.html
+++ b/front/src/app/profile/profile-photo/profile-photo.component.html
@@ -12,7 +12,7 @@
     </div>
     <md-card-content>
         <div class="text-center">
-            <img md-card-image class="rounded-photo-corners" src="../../../assets/img/profile/fitgirl.jpg">
+            <img md-card-image class="rounded-photo-corners" src="../../../assets/profile/fitgirl.jpg">
         </div>
     </md-card-content>
 </md-card>
