--- a/front/src/app/profile/profile.component.html
+++ b/front/src/app/profile/profile.component.html
@@ -37,7 +37,7 @@
     </div>
     <div class="row bottom-right">
         <div class="col-md-12 pt-10 pb-2">
-            <button md-fab class="pull-right bg-primary">
+            <button md-fab class="pull-right bg-primary" (click)="openDialogEditMember()">
                 <i class="ion-edit edit"></i>
             </button>
         </div>
