--- a/front/src/app/welcome/welcome.component.html
+++ b/front/src/app/welcome/welcome.component.html
@@ -1,10 +1,11 @@
-<div class="jumbotron text-white">
-  <div class="container">
-    <img src="../../assets/logo-full.png" class="w-50 img-fluid">
-    <!--<h1 class="pulpe-brand">Pulpe</h1>-->
-    <p class="lead font-weight-light">Votre assistant de fitness virtuel.</p>
-    <hr class="my-4 light">
-    <button class="btn btn-primary btn-lg" routerLink="/connexion">Connexion</button>
-    <button class="btn btn-primary btn-lg" routerLink="/inscription">Inscription</button>
-  </div>
+<div class="row text-center mt-20">
+    <div class="col-md-12">
+        <img src="../../assets/logo-full.png" class="w-25 img-fluid">
+        <p class="lead text-white subtitle">Votre assistant de fitness virtuel.</p>
+
+        <div class="mt-4">
+            <button class="btn btn-primary btn-lg" routerLink="/connexion">Connexion</button>
+            <button class="btn btn-primary btn-lg" routerLink="/inscription">Inscription</button>
+        </div>
+    </div>
 </div>
