--- a/front/src/app/welcome/welcome.component.scss
+++ b/front/src/app/welcome/welcome.component.scss
@@ -15,3 +15,15 @@
 hr {
   border-top: 1px solid rgba(255, 255, 255, 0.30);
 }
+
+.i-am-centered {
+  margin: auto;
+  max-width: 300px;
+}
+
+.subtitle {
+  font-family: Gotham, "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-weight: 100;
+  line-height: 300%;
+  font-size: 1.3rem;
+}
