--- a/front/src/assets/style/custom.scss
+++ b/front/src/assets/style/custom.scss
@@ -138,3 +138,21 @@ body {
   -webkit-animation-delay: -0.9s;
   animation-delay: -0.9s;
 }
+
+.landing-page {
+  background: url('../../assets/img/background.jpg') no-repeat;
+  background-size: 100%;
+  width: 100%;
+  height: 100%;
+
+  &:before {
+    content: '';
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    background-image: linear-gradient(to bottom right,#002f4b,#dc4225);
+    opacity: .6;
+  }
+}
