--- a/front/src/app/app.component.scss
+++ b/front/src/app/app.component.scss
@@ -9,3 +9,7 @@ body {
   flex-direction: row;
   -webkit-flex-direction: row;
 }
+
+.container-bg {
+  background: url('../assets/img/background.jpg');
+}
