--- a/front/src/app/signup/signup.component.html
+++ b/front/src/app/signup/signup.component.html
@@ -1,6 +1,6 @@
 <div class="row mt-md-9">
     <div class="col-md-12">
-        <md-card class="p-0">
+        <md-card class="p-0 blured">
             <div class="row">
                 <div class="col-md-4 col-12">
                     <div class="pt-0 bg-primary-color h-100">
