--- a/front/src/assets/style/_sizes.scss
+++ b/front/src/assets/style/_sizes.scss
@@ -38,6 +38,46 @@
   margin-top: 4.5rem !important
 }
 
+.mt-11 {
+  margin-top: 5rem !important
+}
+
+.mt-12 {
+  margin-top: 5.5rem !important
+}
+
+.mt-13 {
+  margin-top: 6rem !important
+}
+
+.mt-14 {
+  margin-top: 6.5rem !important
+}
+
+.mt-15 {
+  margin-top: 7rem !important
+}
+
+.mt-16 {
+  margin-top: 7.5rem !important
+}
+
+.mt-17 {
+  margin-top: 8rem !important
+}
+
+.mt-18 {
+  margin-top: 8.5rem !important
+}
+
+.mt-19 {
+  margin-top: 9rem !important
+}
+
+.mt-20 {
+  margin-top: 9.5rem !important
+}
+
 .pt-10 {
   padding-top: 4.5rem !important
 }
