--- a/front/src/app/profile/profile-completation-coach/profile-completation-coach.component.html
+++ b/front/src/app/profile/profile-completation-coach/profile-completation-coach.component.html
@@ -1,8 +1,8 @@
 <div class="row">
     <div class="col-md-12">
         <md-card class="text-center">
-            <h2 class=" title pt-1">Complèter votre profil</h2>
-            <h4 class="subtitle text-center pt-2">Ces informations nous permettront d'en savoir plus sur vous.</h4>
+            <h2 class=" title pt-1">Complétez votre profil</h2>
+            <h4 class="subtitle text-center pt-2">Ces informations vont nous permettre d'en savoir plus sur vous.</h4>
         </md-card>
     </div>
 </div>
