--- a/front/src/app/profile/profile-member-edit-dialog/profile-member-edit-dialog.component.scss
+++ b/front/src/app/profile/profile-member-edit-dialog/profile-member-edit-dialog.component.scss
@@ -10,3 +10,41 @@
   display: inline;
 }
 
+.choice {
+  text-align: center;
+  cursor: pointer;
+  margin-top: 20px;
+}
+
+.choice .icon {
+  text-align: center;
+  vertical-align: middle;
+  height: 116px;
+  width: 116px;
+  border-radius: 50%;
+  color: #999999;
+  margin: 0 auto 20px;
+  border: 4px solid #CCCCCC;
+  transition: all 0.2s;
+  -webkit-transition: all 0.2s;
+}
+
+.choice i {
+  font-size: 40px;
+  line-height: 111px;
+}
+
+.choice:hover .icon, .choice.active .icon {
+  border-color: $accent-color;
+}
+
+.choice input[type="radio"],
+.choice input[type="checkbox"] {
+  position: absolute;
+  left: -10000px;
+  z-index: -1;
+}
+
+.center-icon {
+  line-height: 108px;
+}
